--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -18,5 +18,6 @@
   .App-container {
     /* Collapses into 1 column */
     grid-template-columns: 1fr;
+    margin: 5rem 2rem;
   }
 }
