--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: hsl(226, 43%, 10%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
+  display: grid;
+  place-content: center center;
 }
 
 @media only screen and (max-width: 650px) {
